# PX4_Firmware

./: .gitattributes  .github_changelog_generator  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Firmware.sublime-project  Jenkinsfile  Kconfig  LICENSE  Makefile  README.md  appveyor.yml  eclipse.cproject  eclipse.project  package.xml
.ci/: Jenkinsfile-compile  Jenkinsfile-hardware
.clusterfuzzlite/: Dockerfile  build.sh
.devcontainer/: devcontainer.json
Documentation/: Doxyfile.in
ROMFS/: CMakeLists.txt
ROMFS/cannode/: CMakeLists.txt
ROMFS/cannode/init.d/: CMakeLists.txt  rcS
ROMFS/px4fmu_common/init.d-posix/: px4-rc.mavlink  rcS
ROMFS/tcfmu_common/: CMakeLists.txt
ROMFS/tcfmu_common/init.d/: CMakeLists.txt  rc.airship_apps  rc.balloon_apps  rc.mc_apps  rcS
ROMFS/tcfmu_common/init.d-posix/: CMakeLists.txt  rcS  tc-rc.mavlink  tc-rc.params  tc-rc.simulator
ROMFS/tcfmu_test/: CMakeLists.txt
ROMFS/tcfmu_test/init.d/: CMakeLists.txt  rc.standalone  rcS
Tools/: boot_now.py  cryptotools.py  docker_run.sh  fetch_file.py  generate_board_targets_json.py  geotag_images_ulog.py  mavlink_shell.py  mavlink_ulog_streaming.py  package_firmware.py  parameter_update.py  px_mkfw.py  px_process_airframes.py  px_process_events.py  px_process_module_doc.py  px_romfs_pruner.py  px_uploader.py  tc.py  upload.sh  upload_log.py
Tools/HIL/: test_airframes.sh
Tools/astyle/: check_code_style.sh  check_code_style_all.sh
Tools/auterion/: remote_update_fmu.sh  upload_skynode.sh
Tools/kconfig/: merge_config.py  updateconfig.py
Tools/models/: sdp3x_pitot_model.py
Tools/module_config/: generate_actuators_metadata.py
Tools/msg/: generate_msg_docs.py  px_generate_uorb_topic_files.py  px_generate_uorb_topic_helper.py
Tools/setup/: arch.sh  macos.sh  requirements.txt  ubuntu.sh
Tools/simulation/: sitl_multiple_run.sh
Tools/simulation/flightgear/: sitl_run.sh
Tools/simulation/gazebo-classic/: setup_gazebo.bash  sitl_multiple_run.sh  sitl_run.sh
Tools/simulation/jsbsim/: sitl_run.sh
Tools/tcairframes/: markdownout.py
Tools/tcevents/: jsonout.py
Tools/tcmoduledoc/: markdownout.py  srcparser.py
Tools/uorb_graph/: create.py
boards/bitcraze/crazyflie21/: default.px4board
boards/px4/fmu-v2/: default.px4board
boards/px4/fmu-v6c/: default.px4board
boards/px4/fmu-v6x/: default.px4board
boards/px4/sitl/: default.px4board
boards/thuncloud/fmu-v1/: default.tcboard  firmware.prototype
boards/thuncloud/fmu-v1_test/: default.tcboard
cmake/: bloaty.cmake  ccache.cmake  coverage.cmake  cygwin_cygpath.cmake  doxygen.cmake  kconfig.cmake  metadata.cmake  package.cmake  sanitizers.cmake  tc_add_common_flags.cmake  tc_add_library.cmake  tc_add_module.cmake  tc_config.cmake  tc_git.cmake  tc_list_make_absolute.cmake  tc_metadata.cmake  tc_parse_function_args.cmake
cmake/gtest/: gtest.cmake  tc_add_gtest.cmake
launch/: iris.sdf  mavros_posix_sitl.launch  multi_uav_mavros_sitl.launch  multi_uav_mavros_sitl_sdf.launch  posix_sitl.launch  pub_test.launch  rover.sdf  sim.launch  single_vehicle_spawn.launch  single_vehicle_spawn_sdf.launch  tc.launch  uav0.launch  uav1.launch
msg/: CMakeLists.txt  HeaterStatus.msg  InputRc.msg  LogMessage.msg  PidTuning.msg  SwitchbladeCommand.msg  SwitchbladeStatus.msg  TimesyncStatus.msg  TransponderReport.msg  TuneControl.msg  VehicleCommand.msg  tcioStatus.msg
posix-configs/bbblue/: tc.config  tc_fw.config
posix-configs/rpi/: pilotpi_fw.config  pilotpi_mc.config  tc.config  tc_fw.config  tc_hil.config  tc_test.config
src/drivers/: drv_adc.h  drv_board_led.h  drv_dshot.h  drv_hrt.h  drv_input_capture.h  drv_io_heater.h  drv_led.h  drv_neopixel.h  drv_orb_dev.h  drv_pwm_output.h  drv_pwm_trigger.h  drv_sbus.h  drv_sensor.h  drv_tone_alarm.h  drv_watchdog.h
src/drivers/barometer/: CMakeLists.txt  Kconfig
src/drivers/batt_smbus/: CMakeLists.txt  batt_smbus.cpp  batt_smbus.h  parameters.c
src/drivers/bootloaders/: CMakeLists.txt  boot_alt_app_shared.c  boot_alt_app_shared.h  boot_app_shared.c  boot_app_shared.h
src/drivers/camera_capture/: CMakeLists.txt  camera_capture.cpp  camera_capture.hpp  camera_capture_params.c
src/drivers/camera_trigger/: CMakeLists.txt  camera_trigger.cpp  camera_trigger_params.c
src/drivers/cyphal/: CMakeLists.txt  CanardHandle.cpp  CanardHandle.hpp  CanardInterface.hpp  CanardNuttXCDev.cpp  CanardNuttXCDev.hpp  CanardSocketCAN.cpp  CanardSocketCAN.hpp  Cyphal.cpp  Cyphal.hpp  NodeClient.cpp  NodeClient.hpp  NodeManager.cpp  NodeManager.hpp  ParamManager.cpp  ParamManager.hpp  PublicationManager.cpp  PublicationManager.hpp  SubscriptionManager.cpp  SubscriptionManager.hpp  parameters.c
src/drivers/distance_sensor/: CMakeLists.txt
src/drivers/dshot/: CMakeLists.txt  DShot.cpp  DShot.h  DShotTelemetry.cpp  DShotTelemetry.h
src/drivers/gps/: CMakeLists.txt  definitions.h  gps.cpp  params.c
src/drivers/heater/: CMakeLists.txt  heater.cpp  heater.h  heater_params.c
src/drivers/irlock/: CMakeLists.txt  irlock.cpp  parameters.c
src/drivers/lights/: CMakeLists.txt
src/include/: image_toc.h  tc.h  unit_test.h  visibility.h
src/lib/: CMakeLists.txt
test/: mavros_posix_test_avoidance.test  mavros_posix_test_mission.test  mavros_posix_test_safe_landing.test  mavros_posix_tests_iris_opt_flow.test  mavros_posix_tests_missions.test  mavros_posix_tests_offboard_attctl.test  mavros_posix_tests_offboard_posctl.test  mavros_posix_tests_offboard_rpyrt_ctl.test  rostest_avoidance_run.sh  rostest_tc_run.sh
test/mavsdk_tests/: autopilot_tester.cpp  autopilot_tester.h  autopilot_tester_failure.cpp  autopilot_tester_failure.h  autopilot_tester_follow_me.cpp  autopilot_tester_follow_me.h  math_helpers.h  mavsdk_test_runner.py  process_helper.py  test_main.cpp  test_multicopter_control_allocation.cpp  test_multicopter_failsafe.cpp  test_multicopter_failure_injection.cpp  test_multicopter_follow_me.cpp  test_multicopter_manual.cpp  test_multicopter_mission.cpp  test_multicopter_offboard.cpp  test_vtol_mission.cpp
(+2345 files in other folders)
